# data_connection_v2

./: README.md
data_connection/: .flake8  pyproject.toml
data_connection/data_connection/datapoints/: datapoint_base.py
data_connection/data_connection/redis_sync/: redis_sync.py
data_connection/tests/: conftest.py  test_datapoint.py  test_redis.py
data_connection_modbus_client/: .flake8  pyproject.toml
